feat : complete api crud banner and ticket
